fixed mobile alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,28 +8,78 @@ $RanchersFont: 'Ranchers',cursive;
 @mixin padding-15{
     padding:0 15px;
 }
+.small-container{
+    width:600px;
 
+    @media(max-width:767px){
+        width:100%;
+    }
+}
 body, html {
     scroll-behavior: smooth;
-    height: 100%;
+    // height: 100%;
     margin: 0;
     padding: 0;
     line-height: 1.5;
     transform-style: preserve-3d; 
   }
+.navSection{
+    display:flex;
+    justify-content: center;
+    .navbar{
+        background-color: $primary-color;
+        color:#FFF;
+        width:600px;
+        height:50px;
+        border-radius: 15px;
+        margin-top:15px;
+
+        @media(max-width:767px){
+            width:300px;
+        }
+    }
+    
+
+    ul.navLinks{
+        margin:0;
+        padding:0;
+        list-style-type: none;
+        display:flex;
+        justify-content:space-between;
+        padding:10px 15px;
+
+        li a  {
+            font-size:28px;
+            color: #FFF;
+
+            i:hover{
+                transform: scale(1.2);
+            }
+        }
+    }
+
+}
 .mainSection{
     height:100vh;
     .bannerSection{
         display:flex;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
+        margin-top:180px;
+        // position: fixed;
+        // // left: 50%;
+        // top: 50px;
+        // transform: translate(-50%, -50%); 
+        @media(max-width:767px){
+            flex-direction: column;
+            margin-top:30px;
+        }
         
         .bannerImg{
             width:300px;   
+            @media(max-width:767px){
+                width:260px;
+            }
         }
         .bannerText{
         font-family: $LobsterFont;
@@ -39,6 +89,10 @@ body, html {
         width:640px;
         text-align: center;
         // padding-top:130px;
+        @media(max-width:767px){
+            width:100%;
+            font-size:40px;
+        }
         }
         
     }
@@ -47,7 +101,6 @@ body, html {
 }
 
 .experienceSection {
-    @include padding-15;
     background-color: $primary-color;
     height:30vh;
     display:flex;
@@ -61,4 +114,37 @@ body, html {
         font-weight:100;
     }
 
+}
+
+.aboutMe 
+{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-family:$VollkornFont;
+    color:$primary-color;
+    font-size:28px;
+    text-align: justify;
+    letter-spacing: -1.5px;
+    img{
+    width:100px;
+    margin-top:15px;
+    
+}
+}
+.cvDetails{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+    .cvInfo{
+        
+        font-family:$VollkornFont;
+        color:$primary-color;
+        font-size:25px;
+        text-align: justify;
+        letter-spacing: -1.5px;
+    }
+    img{
+        width:100px;
+    }
 }
